k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-payment-backend
spec:
  type: ClusterIP
  selector:
    app: bd-payment-backend
  ports:
    - port: 8000
      targetPort: 8000
